anywhere-server/infra/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anywhere-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anywhere-server
  template:
    metadata:
      labels:
        app: anywhere-server
    spec:
      containers:
      - name: anywhere-server
        image: asia-northeast3-docker.pkg.dev/seungwoojo-com/docker-repo/anywhere-server:1.0.5
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
            ephemeral-storage: "2Gi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: secret-volume
          mountPath: /app/env
      volumes:
      - name: secret-volume
        secret:
          secretName: env-secret
---
apiVersion: v1
kind: Service
metadata:
  name: anywhere-server-svc
  annotations:
    cloud.google.com/backend-config: '{"default": "allow-only-home"}'
spec:
  type: ClusterIP
  selector:
    app: anywhere-server
  ports:
  - port: 80
    targetPort: 4000
