anywhere-server/infra/k8s/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: anywhere-server-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: dev-anywhere.seungwoojo.com
    kubernetes.io/ingress.global-static-ip-name: static-ip-dev
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  defaultBackend:
    service:
      name: anywhere-server-svc
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: ""
        backend:
          service:
            name: anywhere-server-svc
            port:
              number: 80
        pathType: ImplementationSpecific
    host: dev-anywhere.seungwoojo.com
status:
  loadBalancer: {}
